--- a/pom.xml
+++ b/pom.xml
@@ -63,15 +63,15 @@
 		<!-- <dependency> <groupId>com.binance.api</groupId> <artifactId>binance-api-client</artifactId> 
 			<version>1.0.0</version> </dependency> -->
 
-		<!-- <dependency> <groupId>com.sun</groupId> <artifactId>tools</artifactId> 
+		<dependency> <groupId>com.sun</groupId> <artifactId>tools</artifactId> 
 			<version>1.0.0</version> <scope>system</scope> <systemPath>C:\\Program Files\\Java\\jdk1.8.0_191\\lib\\tools.jar</systemPath> 
-			</dependency> -->
+			</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.sun</groupId>
 			<artifactId>tools</artifactId>
 			<version>1.8</version>
-		</dependency>
+		</dependency> -->
 
 
 	</dependencies>
